test/fail/zretthis00.v3
//@execute 0=0; 1=3; 111=333
class A {
	var foo = 11;
	def send<R>(f: int -> R) { f(foo); }
	def set(x: int) -> this { foo = x; }
}

class B extends A {
	var bar = 12;
	def send<R>(f: int -> R) { f(foo); f(bar); }
	def set(x: int) -> this { foo = bar = x; }
}

def main(x: int) -> int {
	var a = A.new(), b = B.new();
	a.set(x);
	b.set(x + 11);
	a.send(b.set);
	b.send(a.set);

	return a.foo + b.foo + b.bar;
}
